--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <section>
         <div>
-            <h1>"Não devemos seguir cegamente ou fazer o que os outros dizem"</h1>
+            <h1>"A felicidade a trouxe aqui! Bem vinda ao Mundo das Fadas!"</h1>
             <p>#Tinker Bell</p>
         </div>
         <div>
