--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </a>
 
 
-        <a href="https://www.youtube.com/watch?v=9hcDOJGBngU>
+        <a href="https://www.youtube.com/watch?v=9hcDOJGBngU">
             <img src="https://img.youtube.com/vi/9hcDOJGBngU/maxresdefault.jpg">
         </a>
 
