--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Tinker Bell </h1>
     </header>
-    <section class="chamada-video"
+    <section class="chamada-video">
         <div>
             <h1>"A felicidade a trouxe aqui! Bem vinda ao Mundo das Fadas!"</h1>
             <p>#Tinker Bell</p>
@@ -19,18 +19,17 @@
             <iframe width="1316" height="740" src="https://www.youtube.com/embed/2HMbcoV25ss" title="Tinker Bell (2008) Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-<section class="categoria-videos"
+<section class="categoria-videos">
     <h2>Mais videos</h2>
     <div> 
         
         
         <a href="https://www.youtube.com/watch?v=lKhGNJd6UCg">
-            <img src=https://img.youtube.com/vi/lKhGNJd6UCg/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/lKhGNJd6UCg/maxresdefault.jpg">
         </a>
 
-
-        <a href="https://www.youtube.com/watch?v=eo3-suJ-atg">
-            <img src="https://img.youtube.com/vi/eo3-suJ-atg/maxresdefault.jpg">
+        <a href="https://www.youtube.com/watch?v=9hcDOJGBngU">
+            <img src="https://img.youtube.com/vi/9hcDOJGBngU/maxresdefault.jpg">
         </a>
 
         <a href="https://www.youtube.com/watch?v=f4eFkNvidw8">
